2005-07-28  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c: (_cairo_gstate_mask): Run the mask pattern
	through the CTM in the same way as the source pattern. This fixes
	the bug demonstrated by the mask-ctm and mask-surface-ctm tests so
	they should no longer fail.

2005-07-28  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/mask-ctm-ref.png:
	* test/mask-ctm.c: (draw), (main):
	* test/mask-surface-ctm-ref.png:
	* test/mask-surface-ctm.c: (draw), (main): Add two new tests:
		mask-ctm
		mask-surface-ctm
	  demonstrating that masks are not currently being modified by the
	  CTM.

2005-07-28  Carl Worth  <cworth@cworth.org>

	* RELEASING: CC gnome-announce-list@gnome.org on cairo release
	announcements.

2005-07-28  Carl Worth  <cworth@cworth.org>

	* configure.in: Add -head to CAIRO_VERSION after tagging with
	SNAPSHOT_0_6_0.

2005-07-28  Carl Worth  <cworth@cworth.org>

	* NEWS: Added notes for snapshot 0.6.0
	
	* configure.in: Increment CAIRO_VERSION to 0.6.0

2005-07-28  Carl Worth  <cworth@cworth.org>

	* src/cairo-ft-font.c: (_move_to), (_line_to), (_conic_to),
	(_cubic_to): Remove const qualifiers that only make things happy
	with a from-cvs version of freetype. Now we should be back to
	being happy with a released version.

2005-07-28  Carl Worth  <cworth@cworth.org>

	* src/cairo-png.c (read_png): Add missing cast.

2005-07-28  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am (EXTRA_DIST): Remove
	text-antialias-subpixel-ref.png from the list since it doesn't
	exist yet.

2005-07-28  Carl Worth  <cworth@cworth.org>

	* doc/public/tmpl/cairo.sgml: More doc/public/tmpl churn.

2005-07-28  Carl Worth  <cworth@cworth.org>
	
	* test/Makefile.am (EXTRA_DIST): Add
	text-antialias-{gray|none|subpixel}-ref.png so they get
	distributed.

2005-07-28  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* test/cairo-test.c (cairo_test_create_surface_from_png): Use
	cairo_surface_status(image) instead of testing for NULL from